--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
             </p>
             
         </div>
-        
-
-
-
-
-
-
 
     </div>
+<div class="author">
+    Created by Marcus VG
+</div>
 
 </body>
 
@@ -123,6 +119,7 @@
         })
 
     });
+
 
 
 
