--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
     const newGridDimensions = document.querySelector(".newGridDimensions");
     const resetSketch = document.querySelector(".resetSketch");
     const inputColor = document.querySelector(".inputColor");
-    const allDivs = gridContainer.querySelectorAll('div');
 
     dimensions(16);
 
     let allDivs = gridContainer.querySelectorAll('div');
+
+
     allDivs.forEach((div) => {
         div.addEventListener('mouseover', () => {
             div.style.background = "white";
@@ -71,6 +72,7 @@
     newGridDimensions.addEventListener("click", () => {
         let dimension = newGridPrompt();
         dimensions(dimension);
+        let allDivs = gridContainer.querySelectorAll('div');
 
         allDivs.forEach((div) => {
             div.addEventListener('mouseover', () => {
@@ -94,7 +96,6 @@
 
 
     resetSketch.addEventListener("click", () => {
-
         let allDivs = gridContainer.querySelectorAll('div');
         allDivs.forEach((div) => {
             div.style.background = "black";
